--- a/cliente/html/administrar/crear.html
+++ b/cliente/html/administrar/crear.html
@@ -36,7 +36,7 @@
 			</div>
 
 			<input type="submit" name="Guardar" value="Crear"/>
-			<input type="reset" name="Reset" value="Crear"/>Borrar</input>
+			<input type="reset" name="Reset" value="Borrar"/></input>
 
 		</form>
 
